--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/emily-k1m/mywebsite/#",
+  "homepage": "https://emily-k1m.github.io/mywebsite/#",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
